Adding swagger User tag
